major cleanup for 2020 labs, add datalist tags

--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,17 @@ body {
   font-weight: bold;
   text-align: center;
   box-sizing: border-box;
+  margin-top: 0;
 }
 
 fieldset {
   background: #eee;
   border: none;
+  padding: .5em 12px;
   margin-bottom: 0.5em;
 }
 
-/* overrides the ugly default date field style */
+/* overrides the ugly browser default date field style */
 input[type="date"] {
   font-family: inherit;
   font-size: 1em;
